--- a/nitaitechnolabs/src/Styles/navbar.css
+++ b/nitaitechnolabs/src/Styles/navbar.css
@@ -5,7 +5,7 @@
 }
 .navConatiner  {
     padding: 1vw 2vw;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -13,7 +13,7 @@
 
 }
 .navPart2 {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
