--- a/src/Styles/cyber.css
+++ b/src/Styles/cyber.css
@@ -5,20 +5,20 @@
 }
 .cyberContainer {
     min-height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
 }
 .cyberBackdrop {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 12vw;
-    width: 100vw;
+    /* width: 100vw; */
     background: url('/images/backdrop.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 .cyberHead {
-    backdrop-filter: blur(4px);
-    width: 100vw;
+    backdrop-filter: blur(5px);
+    /* width: 100vw; */
     height: 100%;
     /* border: 2px solid red; */
     display: flex;
@@ -28,6 +28,7 @@
 .cyberHead h2 {
     font-size: 4.5vw;
     color: white;
+    margin-bottom: 3vw;
 }
 .cyberImage {
     /* border: 2px solid red; */
@@ -62,7 +63,6 @@
     font-size: 1.2vw;
 }
 .cyberManage {
-    width: 100vw;
     height: auto;
     /* border:  2px solid yellow; */
     display: flex;
