--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -2,11 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 .navbar{
     z-index: 100;
     display: flex;
+    height: 12vh;
     top: 0;
     position: sticky;
     justify-content: space-between;
@@ -20,9 +22,23 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+
+}
+.navbarLogo img{
+    width: 5vw;
 }
 
 .navbarItems{
     display: flex;
-    gap: 1rem;
+    gap: 3vw;
 }
+
+.navItem{
+    font-size: 1.5vw;
+    font-family: system-ui;
+    font-weight: 400;
+}
+
+.navItem.active {
+    border-bottom: 2px solid #000; /* Change to your desired color */
+  }
