--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -6,11 +6,9 @@
 }
 
 .home{
-  background: rgb(230, 230, 230);
+  background: rgb(249, 249, 249);
   overflow-x: hidden;
   scroll-behavior: smooth;
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,190,255,1) 0%, rgba(145,216,240,1) 0%, rgba(163,229,250,1) 0%, rgba(195,238,255,1) 1%, rgba(217,242,247,1) 100%, rgba(205,240,252,1) 100%, rgba(0,164,225,1) 100%, rgba(2,38,80,1) 100%, rgba(5,38,113,1) 100%, rgba(9,9,121,1) 100%, rgba(7,58,154,1) 100%);
 }
 .mainSection{
   padding: 3vw;
@@ -18,6 +16,8 @@
   position: relative;
   height: 88vh;
   place-items: center;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,190,255,1) 0%, rgba(145,216,240,1) 0%, rgba(163,229,250,1) 0%, rgba(195,238,255,1) 1%, rgba(217,242,247,1) 100%, rgba(205,240,252,1) 100%, rgba(0,164,225,1) 100%, rgba(2,38,80,1) 100%, rgba(5,38,113,1) 100%, rgba(9,9,121,1) 100%, rgba(7,58,154,1) 100%);
 }
 
 #heading{
@@ -187,4 +187,60 @@
   background-repeat: no-repeat;
   border-radius: 2vw;
   box-shadow: 0px 0px 3px 0px black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 800px) {
+  #heading {
+    font-size: 9vw;
+    width: 100%;
+}
+  #para{
+    font-size: 4vw;
+  }
+  #slideDownIcon {
+    width: 9vw;
+    height: 7.4vw;
+}
+#coursesHeading {
+  font-size: 10vw;
+  margin: 5vw 0;
+}
+  .coursesSection {
+    grid-template-columns: 1fr;
+    gap: 4vw;
+}
+.courses h1{
+  font-size: 6vw;
+}
+
+.courses p {
+  font-size: 4vw;
+  margin: 10vw 0;
+}
+.courseLinks {
+  font-size: 5vw;
+  padding: 2vw 5vw;
+}
+.aboutUsSection {
+  grid-template-columns: 1fr;
+}
+.aboutUsSection h1 {
+  font-size: 10vw;
+  margin-top : 10vw;
+}
+.aboutUsSection p {
+  font-size: 3.4vw;
+  margin: 3vw 0;
+}
 }
