--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -1,11 +1,11 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-}
-
-.navbar{
+  }
+  
+  .navbar {
     z-index: 100;
     display: flex;
     height: 12vh;
@@ -15,49 +15,108 @@
     align-items: center;
     padding: 0.5rem 2rem;
     backdrop-filter: blur(3rem);
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,190,255,1) 0%, rgba(145,216,240,1) 0%, rgba(163,229,250,1) 0%, rgba(195,238,255,1) 1%, rgba(217,242,247,1) 100%, rgba(205,240,252,1) 100%, rgba(0,164,225,1) 100%, rgba(2,38,80,1) 100%, rgba(5,38,113,1) 100%, rgba(9,9,121,1) 100%, rgba(7,58,154,1) 100%);
   }
-
-.navbarLogo{
+  
+  .navbarLogo {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-
-}
-.navbarLogo img{
+  }
+  
+  .navbarLogo img {
     width: 5vw;
-}
-
-.navbarItems{
+  }
+  
+  .navbarItems {
     display: flex;
     gap: 3vw;
-}
-
-.navItem{
+  }
+  
+  .navItem {
     font-size: 1.5vw;
     font-family: system-ui;
     font-weight: 400;
-}
-
-.navItem.active {
+  }
+  
+  .navItem.active {
     border-bottom: 2px solid #000; /* Change to your desired color */
   }
-
-#logoText1{
+  
+  #logoText1 {
     font-size: 1vw;
-}
-#logoText2{
+  }
+  
+  #logoText2 {
     font-size: 1.5vw;
-}
-#logoText3{
+  }
+  
+  #logoText3 {
     font-size: 1vw;
-}
-#logoText1,
-#logoText2,
-#logoText3{
+  }
+  
+  #logoText1,
+  #logoText2,
+  #logoText3 {
     font-family: cursive;
-}
-
- 
+  }
+  
+  .menuIcon {
+    display: none;
+    z-index: 99;
+  }
+  
+  .menuNavbarItems {
+    display: none;
+  }
+  
+  @media screen and (max-width: 800px) {
+    .navbarItems {
+      display: none;
+    }
+  
+    .menuIcon {
+        display: block;
+        font-size: 7vw;
+        cursor: pointer;
+    }
+  
+    .menuNavbarItems {
+        height: 60vh;
+        width: 90vw;
+        border-radius: 11vw;
+        position: absolute;
+        box-shadow: 0px 0px 10px -3px black;
+        top: 2vh;
+        backdrop-filter: blur(85px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 5vw;
+        transform: translateX(100vw);
+        background: linear-gradient(45deg, #cfffff, #6dfcfcd4);
+        transition: transform 0.3s ease-in-out;
+    }
+  
+    .menuNavbarItems.showMenu {
+      transform: translateX(0);
+    }
+  
+    .navItem {
+      font-size: 7vw;
+    }
+    .navbarLogo img {
+        width: 15vw;
+    }
+    #logoText1 {
+        font-size: 3vw;
+    }
+    #logoText2 {
+        font-size: 4vw;
+    }
+    #logoText3 {
+        font-size: 3vw;
+    }
+  }
+  
