--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -123,13 +123,19 @@
 .coursesSection .cs{
   background: #80ffb0;
 }
+.cs h1{
+  width: 80%;
+
+}
 
 .courses h1 {
-    font-size: 3vw;
-    text-align: center;
-    font-family: system-ui;
-    font-weight: bold;
-    line-height: 3rem;
+  font-size: 3vw;
+  -webkit-text-stroke: 1px #00000057;
+  text-align: center;
+  color: white;
+  font-family: system-ui;
+  font-weight: bold;
+  line-height: 3rem;
 }
 
 
@@ -221,7 +227,7 @@
     gap: 4vw;
 }
 .courses h1{
-  font-size: 6vw;
+  font-size: 9vw;
 }
 
 .courses p {
