--- a/src/Styles/aboutus.css
+++ b/src/Styles/aboutus.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Zain:wght@200;300;400;700;800;900&display=swap'); 
+
 .aboutUsContainer{
   padding: 5vw;
   display: grid;
+  overflow-x: hidden;
+
   place-items: center;
 }
 
@@ -29,7 +33,9 @@
       text-align: center;
       font-size: 1.5vw;
       margin: 3rem 0;
-      font-family: cursive;
+      font-family: "Zain", sans-serif;
+  font-weight: 400;
+  font-style: normal;
       color: #3e3e3e;
       width: 80%;
 }
@@ -44,8 +50,8 @@
   #aboutUsHeading {
     font-size: 9vw;
   }
-  .aboutUsPara{
-    font-size: 4vw;
-    margin-top: 15vw;
-  }
+  .aboutUsPara {
+    font-size: 6vw;
+    margin-top: 10vw;
+}
 }
