--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Zain:wght@200;300;400;700;800;900&display=swap'); 
 
 *{
   margin: 0;
@@ -11,12 +12,15 @@
   background: rgb(249, 249, 249);
   overflow-x: hidden;
   scroll-behavior: smooth;
+
 }
 .mainSection{
   padding: 3vw;
   display: grid;
   position: relative;
   height: 88vh;
+  overflow-x: hidden;
+
   place-items: center;
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,190,255,1) 0%, rgba(145,216,240,1) 0%, rgba(163,229,250,1) 0%, rgba(195,238,255,1) 1%, rgba(217,242,247,1) 100%, rgba(205,240,252,1) 100%, rgba(0,164,225,1) 100%, rgba(2,38,80,1) 100%, rgba(5,38,113,1) 100%, rgba(9,9,121,1) 100%, rgba(7,58,154,1) 100%);
@@ -39,7 +43,9 @@
 margin: 1vw 0;
   text-align: center;
   font-size: 1.7vw;
-  font-family: cursive;
+  font-family: "Zain", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   color: #3e3e3e;
   width: 90%;
 }
@@ -147,8 +153,10 @@ margin: 1vw 0;
 
 
 .courses p {
-  font-size: 1.3vw;
-  font-family: cursive;
+  font-size: 1.5vw;
+  font-family: "Zain", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   text-align: center;
   color: #383838;
   margin: 2vw 0px;
@@ -191,8 +199,10 @@ margin: 1vw 0;
 }
 
 .aboutUsSection p{
-  font-size: 1.3vw;
-  font-family: cursive;
+  font-size: 1.6vw;
+  font-family: "Zain", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   color: #383838;
   text-align: center;
   margin: 2vw 0;
@@ -218,11 +228,11 @@ margin: 1vw 0;
 
 @media screen and (max-width: 800px) {
   #heading {
-    font-size: 9vw;
+    font-size: 8vw;
     width: 100%;
 }
   #para{
-    font-size: 4vw;
+    font-size: 5.5vw;
   }
   #slideDownIcon {
     width: 9vw;
@@ -245,7 +255,7 @@ margin: 1vw 0;
 }
 
 .courses p {
-  font-size: 4vw;
+  font-size: 5vw;
   margin: 10vw 0;
 }
 .courseLinks {
@@ -260,7 +270,7 @@ margin: 1vw 0;
   margin-top : 10vw;
 }
 .aboutUsSection p {
-  font-size: 3.4vw;
+  font-size: 4.5vw;
   margin: 3vw 0;
 }
 }
