--- a/src/Styles/sd.css
+++ b/src/Styles/sd.css
@@ -43,6 +43,8 @@
 .container {
     display: flex;
     justify-content: center;
+  overflow-x: hidden;
+
     align-items: center;
     flex-direction: column;
     width: 60vw;
