--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -128,13 +128,13 @@ margin: 1vw 0;
 }
 
 .coursesSection .sd{
-  background: #efbf97;
+  background: #efbf97a8;
 }
 .coursesSection .st{
-  background: #d4abff;
+  background: #d4abffbd;
 }
 .coursesSection .cs{
-  background: #80ffb0;
+  background: #00ffff52;
 }
 .cs h1{
   width: 80%;
