--- a/src/Styles/navbar.css
+++ b/src/Styles/navbar.css
@@ -86,21 +86,22 @@
     }
   
     .menuNavbarItems {
-        height: 60vh;
-        width: 90vw;
-        border-radius: 11vw;
-        position: absolute;
-        box-shadow: 0px 0px 10px -3px black;
-        top: 2vh;
-        backdrop-filter: blur(85px);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        gap: 5vw;
-        transform: translateX(100vw);
-        background: linear-gradient(45deg, #dbffff, #b9f4ffd4);
-        transition: transform 0.3s ease-in-out;
+      right: 2vw;
+      height: 100vh;
+      width: 65vw;
+      border-radius: 2vw;
+      position: absolute;
+      box-shadow: 0px 0px 10px -3px black;
+      top: 0;
+      backdrop-filter: blur(85px);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 5vw;
+      background: white;
+      transform: translateX(100vw);
+      transition: transform 0.3s ease-in-out;
     }
   
     .menuNavbarItems.showMenu {
